force-app/main/default/src/objects/PJN_Care_Plan_Update__e/PJN_Care_Plan_Update__e.object-meta.xml
<CustomObject>
    <description>Indicates a care plan has been updated</description>
    <label>Care Plan Update</label>
    <pluralLabel>Care Plan Updates</pluralLabel>
</CustomObject>