force-app/main/default/src/objects/PJN_Care_Plan_Update__e/fields/PJN_Care_Plan_Id__c.field-meta.xml
<CustomField>
    <fullName>PJN_Care_Plan_Id__c</fullName>
    <description>The id of the care plan which was updated</description>
    <label>Care Plan Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>