force-app/main/default/src/objects/PJN_Care_Plan_Update__e/fields/PJN_Care_Plan_Ids_List__c.field-meta.xml
<CustomField>
    <fullName>PJN_Care_Plan_Ids_List__c</fullName>
    <description>This field is set by the platform event trigger on the Care Plan Update event which takes all ids passed in and reduces them down to a single string of of semi-colon delimited Ids.</description>
    <label>Care Plan Ids List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>