force-app/main/default/src/objects/PJN_Care_Plan_Update__e/fields/PJN_Intermediate_Event__c.field-meta.xml
<CustomField>
    <fullName>PJN_Intermediate_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag indicates that the event was created before the transaction completed and should be captured by the Program Event trigger which will reduce all of the ids down to a single string of semi-colon delimited ids that will be published in a single non-intermediate event.</description>
    <label>Intermediate Event</label>
    <type>Checkbox</type>
</CustomField>